--- a/sites/QuixxProjectsSiteTest/design.css
+++ b/sites/QuixxProjectsSiteTest/design.css
@@ -268,6 +268,12 @@ li{
     float: top;
 }
 
+.details-how{
+    position: relative;
+    top: 50vh;
+    left: 5%;
+}
+
 
 .projects-section{
     /* height: 110vh; */
@@ -606,6 +612,10 @@ footer {
         flex-direction: column;
         width: 90%;
         margin-bottom: 20vh;
+    }
+
+    .details-how{
+        display: none;
     }
 
     #works-header .project-banner{
