Contact Page Mobile Scaling Fix

--- a/design.css
+++ b/design.css
@@ -11,6 +11,7 @@ html{
     scroll-padding-top: 11vh;
     overflow-x: hidden;
     overflow-y: scroll;
+    /* filter: invert(1) hue-rotate(180deg); */
 }
 
 
@@ -52,12 +53,12 @@ header nav{
     /* left: 0px; */
     text-align: end;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 0px;
     height: var(--navbarheight);
     min-height: 32px;
     background: #FFFFFF;
     font-size: 0;
-    box-shadow: 0 3px 0 3px rgba(50, 50, 50, 0.2);
+    box-shadow: 0 3px 10px 3px rgba(50, 50, 50, 0.2);
 }
 
 .nav-item{
@@ -185,9 +186,10 @@ header nav .top-bar,a:nth-child(4):hover~.animate{
 
 .services-header{
     font-size: 6vh;
+    position: relative;
     color: #222D5B;
     margin-left: 5%;
-    margin-top: 2vh;
+    margin-top: 3vh;
 }
 
 .services-cards{
@@ -268,13 +270,6 @@ li{
     float: top;
 }
 
-.details-how{
-    position: relative;
-    top: 50vh;
-    left: 5%;
-}
-
-
 .projects-section{
     /* height: 110vh; */
     position: relative;
@@ -348,13 +343,13 @@ li{
     position: relative;
     top: 20vh;
     left: 5%;
+    bottom: 20vh;
     width: 90%;
-    height: 75vh;
     padding: 40px;
     /* margin-top: 50px; */
     margin-bottom: 10vh;
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.2);
+    box-shadow: 0 15px 20px rgba(0,0,0,.2);
     border-radius: 10px;
 }
 
@@ -429,6 +424,11 @@ li{
 .send-icon{
     float: left;
     height: 3vh;
+}
+
+
+form{
+    height: 80vh;
 }
 
 
@@ -647,12 +647,14 @@ footer {
 
     .contact-section{
         box-shadow: 0 0 0 0 ;
+        margin-bottom: 20vh;
     }
 
     .contact-section h1{
         font-size: 4vh;
         color: #222D5B;
-        margin-top: 10vh;
+        padding-top: 10vh;
+        padding-bottom: 10vh;
     }
 
     footer{
